# pixelpylot

./: .gitignore  README.md  pyproject.toml
app/: __main__.py
app/compress/: compressor.py  interface.py
app/rename/: __init__.py  config.toml  sony_v_pipeline.py
app/rename_sony_clip/: __init__.py  interface.py  task_pipeline.py
pixelpylot/: __main__.py
pixelpylot/cli/: __init__.py  main.py
pixelpylot/compress/: compressor.py  interface.py
pixelpylot/core/: utils.py
pixelpylot/rename/: interface.py  sony_v_pipeline.py  sony_v_xml_parser.py
pixelpylot/service/: compressor.py
