[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelpylot"
description = "Photography post-production workflow automation CLI."
requires-python = ">=3.11"
authors = [
    { name = "Teii Ri", email = "teiiri@outlook.com" },
]
readme = "README.md"
keywords = ["photography", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Assemblers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[project.scripts]
pxp = "pixelpylot.__main__:main"

[project.urls]
Homepage = "https://github.com/davidli218/pixelpylot"
Issues = "https://github.com/davidli218/pixelpylot/issues"

[tool.setuptools.dynamic]
version = { attr = "pixelpylot.__version__" }

[tool.setuptools.packages.find]
include = ["pixelpylot*"]
namespaces = false

[tool.setuptools.package-data]
"pixelpylot.rename" = ["config.toml"]
